remove high speed train

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   <!--    <label class="btn btn-primary">
           <input type="checkbox" name="ferry" value="ferry" checked> Ferry
       </label> -->
-      <label class="btn btn-primary">
+<!--       <label class="btn btn-primary">
         <input type="checkbox" name="high_speed" value="high_speed"> High Speed Train
-      </label>
+      </label> -->
     </div>
   </form><hr>
 </div>
